latexindentの設定ファイルを追加

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,13 @@
                 "latex-workshop.intellisense.package.dirs": [
                     "/workspaces/LaTeX/.config/intellisense"
                 ],
+                "latex-workshop.formatting.latexindent.args": [
+                    "-c",
+                    "%DIR%/",
+                    "%TMPFILE%",
+                    "-l",
+                    "/workspaces/LaTeX/.config/latexindent.yaml"
+                ],
                 "[latex]": {
                     "editor.formatOnPaste": false,
                     "editor.suggestSelection": "recentlyUsedByPrefix",
