.latexmkrcを移行．それに伴いDockerfileも修正．

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,6 @@
 FROM texlive/texlive:latest
 
 COPY .config/texmf-local/ /usr/local/texlive/texmf-local/
+COPY .config/.latexmkrc /root
 
 RUN mktexlsr
